Добавил карточки реслеров.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,13 +18,13 @@
     <string name="settings">Настройки</string>
     <string name="about_app">О программе</string>
     <string name="saladTxt">Салаты</string>
-    <string name="salad_descr">Салаты</string>
+    <string name="anton_deryabin_descr">Антон Дерябин</string>
     <string name="add_recipe_logo">Добавить\nрецепт</string>
     <string name="news_tab_textview">Новости</string>
-    <string name="name_saladButton">Салаты</string>
-    <string name="name_soupButton">Супы</string>
-    <string name="name_meatButton">Мясо</string>
-    <string name="name_chickenButton">Курица</string>
+    <string name="name_antonDeryabin">Антон Дерябин</string>
+    <string name="name_sergwhiteButton">Сергей Белый</string>
+    <string name="name_lokoButton">Локомотив</string>
+    <string name="name_gromovButton">Иван Громов</string>
     <string name="name_vtoroeButton">Второе</string>
     <string name="name_fishButton">Рыба</string>
     <string name="name_vegetablesButton">Овощи</string>
